Fixed stretching

--- a/src/components/shared/CardList/Card/Card.module.css
+++ b/src/components/shared/CardList/Card/Card.module.css
@@ -13,6 +13,7 @@
 
 .card {
     height: 100%;
+    min-width: 100%;
     object-fit: cover;
 }
 
